# tryloadresource2

./: LICENSE  README.md  pyproject.toml
tryloadresource/: __main__.py  app.py  foo.csv
